# 477-hw2

./: .gitignore  477-hw2.cpp  477-hw2.h  CMakeLists.txt  Camera.cpp  Camera.h  Makefile  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Triangle.h  geometry.hpp  line.cpp  line.hpp  main.cpp  main.d  mat4.hpp  ppm.cpp  ppm.hpp  rasterizer  vec.hpp
